compiler/testData/diagnostics/tests/when/testTask/EmptyCondition.kt
fun foo(x: Int): Boolean = when (x) {
    <!SYNTAX!><!>-> false
    else -> true
}
